Modificaciones index.html

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles%}
 {% block title %} Bolsa de Trabajo DCC {% endblock %}
-
+{% block load %}<link rel="stylesheet" href="{% static 'css/index.css' %}"> {% endblock %}
 {% block main %}
 <div class="wrapper">
     <div class="box">
