--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -6,11 +6,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
-
+        
         <title>{% block title %} {% endblock %}</title>
-        {% block loadscript %}
-        {% endblock loadscript %}
+        {% block load %}
+        {% endblock load %}
         
         {% block javascript %}
         {% endblock javascript %}
