--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -7,7 +7,7 @@
 
 {% block main%}
 
-            <form id="login" action="" method="post" class="tokenform">
+ <!--            <form id="login" action="" method="post" class="tokenform">
                 {% csrf_token %}
                 <fieldset>
                     <ol>
@@ -38,6 +38,50 @@
                         </li>
                     </ol>
                 </fieldset>
-            </form>
-            
+
+                            </form> -->
+
+            <div id="loginModal" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                      <h1 class="text-center">Login</h1>
+                  </div>
+                  <div class="modal-body">
+                      <form class="form col-md-12 center-block">
+                      {% csrf_token %}
+                        <div class="form-group">
+                        {{form.email}}
+                          <!-- <input type="text" class="form-control input-lg" placeholder="Email"> -->
+                        </div>
+                        <div class="form-group">
+                        {{form.password}}
+                          <!-- <input type="password" class="form-control input-lg" placeholder="Password"> -->
+                        </div>
+                        <div class="form-group">
+                          <button class="btn btn-primary btn-lg btn-block">Sign In</button>
+                          <span class="pull-right"><a href="#">Register</a></span><span><a href="#">Need help?</a></span>
+                        </div>
+                      </form>
+                </div>
+                <div class="modal-footer">
+                    <div class="col-md-12">
+                    <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                    </div>    
+                </div>
+                {% for message in messages %}
+                        {{ message }}
+                {% endfor %}
+              </div>
+              </div>
+            </div>
+
+
+
+
 {% endblock%}
+
+{% block scripts-down %}
+        <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+{% endblock %}
