--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,223 +1,48 @@
-{% extends 'base.html' %}
+{% extends 'template_base.html' %}
 {% load staticfiles%}
-{% block title %} Bolsa de Trabajo DCC {% endblock %}
-{% block load %}<link rel="stylesheet" href="{% static 'css/index.css' %}"> {% endblock %}
-{% block main %}
-<div class="wrapper">
-    <div class="box">
-        <div class="row">
-          
-            <!-- sidebar -->
-            <div class="column col-sm-3" id="sidebar">
-                <!--<a class="logo" href="#"></a>
-                  <ul class="nav">
-                    <li class="active"><a href="#featured">Featured</a>
-                    </li>
-                    <li><a href="#stories">Stories</a>
-                    </li>
-                  </ul>-->
-                <ul class="nav hidden-xs" id="sidebar-footer">
-                    <li>
-                      <a href="{% url 'index' %}"><h3>Bolsa de trabajo</h3>
-                      Departamento Ciencias de la Computación
-                      <!--Made with <i class="glyphicon glyphicon-heart-empty"></i> by Bootply-->
-                      </a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /sidebar -->
-          
-            <!-- main -->
-            <div class="column col-sm-9" id="main">
-                <div class="padding">
-                    <div class="full col-sm-9">
-                      
-                        <!-- content -->
-                        
-<!--                         <div class="col-sm-12" id="featured">   
-                          <div class="page-header text-muted">
-                          Featured
-                          </div> 
-                        </div> -->
-                        
-                        <!--/top story-->
-<!--                         <div class="row">    
-                          <div class="col-sm-10">
-                            <h3>This is Some Awesome Featured Content</h3>
-                            <h4><span class="label label-default">techvisually.com</span></h4><h4>
-                            <small class="text-muted">1 hour ago • <a href="#" class="text-muted">Read More</a></small>
-                            </h4>
-                          </div>
-                          <div class="col-sm-2">
-                            <a href="#" class="pull-right"><img src="/assets/example/bg_sailboat.jpg" class="img-circle"></a>
-                          </div> 
-                        </div> -->
-                        
-                        <div class="col-sm-12" id="stories">  
-                          <div class="page-header text-muted divider">
-                            Ofertas Disponibles
-                          </div>
-                        </div>
-                        
-                        
-                        <!--/stories-->
-                        <div class="row">    
-                          <div class="col-sm-10">
-                            <h3>Investigador part-time Adkintun Mobile</h3>
-                            <h4><span class="label label-default">NIC Chile Research Labs</span>
-                            <span class="label label-info">Part-Time</span>
-                            <span class="label label-info">Práctica</span>
-                            </h4>
-                            <h4>
-                            <small class="text-muted">1 hour ago • <a href="#" class="text-muted">Read More</a></small>
-                            </h4>
-                          </div>
-                          <div class="col-sm-2">
-                            <a href="#" class="pull-right"><img src="//placehold.it/100" class="img-circle"></a>
-                          </div>
-                        </div>
-                        
-                        <div class="row divider">    
-                           <div class="col-sm-12"><hr></div>
-                        </div>
-                        
-                        <div class="row">    
-                          <div class="col-sm-10">
-                            <h3>Trabajo dirigido cuaticamente brígido </h3>
-                            <h4><span class="label label-default">Pablo Barceló</span>
-                            <span class="label label-info">Trabajo Dirigido</span>
-                            <span class="label label-info">Full-Time</span></h4>
-                            <h4>
-                            <small class="text-muted">2 days ago • <a href="#" class="text-muted">Read More</a></small>
-                            </h4>
-                          </div>
-                          <div class="col-sm-2">
-                            <a href="#" class="pull-right"><img src="//placehold.it/100" class="img-circle"></a>
-                          </div>
-                        </div>
-                        
-                        <div class="row divider">    
-                           <div class="col-sm-12"><hr></div>
-                        </div>
-                        <!-- 
-                        <div class="row">    
-                          <div class="col-sm-10">
-                            <h3>Bootstrap Builders Get Their Own Playground</h3>
-                            <h4><span class="label label-default">bootply.com</span></h4><h4>
-                            <small class="text-muted">3 days ago • <a href="#" class="text-muted">Read More</a></small>
-                            </h4>
-                          </div>
-                          <div class="col-sm-2">
-                            <a href="#" class="pull-right"><img src="/assets/example/bg_sailboat.jpg" class="img-circle"></a>
-                          </div>
-                        </div>
-                        
-                        <div class="row divider">    
-                           <div class="col-sm-12"><hr></div>
-                        </div>
-                        
-                        <div class="row">    
-                          <div class="col-sm-10">
-                            <h3>How to: Another Fantastical Article</h3>
-                            <h4><span class="label label-default">bootply.com</span></h4><h4>
-                            <small class="text-muted">4 days ago • <a href="#" class="text-muted">Read More</a></small>
-                            </h4>
-                          </div>
-                          <div class="col-sm-2">
-                            <a href="#" class="pull-right"><img src="//placehold.it/100" class="img-circle"></a>
-                          </div>
-                        </div>
-                        
-                        <div class="row divider">    
-                           <div class="col-sm-12"><hr></div>
-                        </div>
-                        
-                        <div class="row">    
-                          <div class="col-sm-9">
-                            <h3>Another Fantastical Article of Interest</h3>
-                            <h4><span class="label label-default">bootply.com</span></h4><h4>
-                            <small class="text-muted">4 days ago • <a href="#" class="text-muted">Read More</a></small>
-                            </h4>
-                          </div>
-                          <div class="col-sm-3">
-                            <a href="#" class="pull-right"><img src="//placehold.it/100" class="img-circle"></a>
-                          </div>
-                        </div>
-                        
-                        <div class="col-sm-12">
-                          <div class="page-header text-muted divider">
-                            Up Next
-                          </div>
-                        </div> -->
 
-                        <div class="col-sm-12" id="stories">  
-                          <div class="page-header text-muted divider">
-                            Clasificaciones
-                          </div>
-                        </div>
-                      
-                        <div class="row">    
-                          
-                          <div class="col-sm-3 text-center">
-                            <h4>Full-Time</h4>
-                            <a href="#"><img src="//placehold.it/100" class="img-circle"></a>
-                          </div>
-                          <div class="col-sm-3 text-center">
-                            <h4>Part-Time</h4>
-                            <a href="#"><img src="//placehold.it/100" class="img-circle"></a>
-                          </div>
-                          <div class="col-sm-3 text-center">
-                            <h4>Trabajos Dirigidos</h4>
-                            <a href="#"><img src="//placehold.it/100" class="img-circle"></a>
-                          </div>
-                          <div class="col-sm-3 text-center">
-                            <h4>Prácticas</h4>
-                            <a href="#"><img src="//placehold.it/100" class="img-circle"></a>
-                          </div>
-                        </div>
-                      
-                      
-                        <div class="col-sm-12">
-                          <div class="page-header text-muted divider">
-                            Contáctanos
-                          </div>
-                        </div>
-                      
-                        <div class="row">
-                          <div class="col-sm-6">
-                            <a href="#">Twitter</a> <small class="text-muted">|</small> <a href="#">Facebook</a> <small class="text-muted">|</small> <a href="#">Google+</a>
-                          </div>
-                        </div>
-                        
-                        <hr>
-                      
-                        <div class="row" id="footer">    
-                          <div class="col-sm-6">
-                            
-                          </div>
-                          <div class="col-sm-6">
-                            <p>
-                            <a href="#" class="pull-right">CaDCC 2014</a>
-                            </p>
-                          </div>
-                        </div>
-                      
-<!--                       <hr>
-                      
-                      <h3 class="text-center">
-                      <a href="http://bootply.com/86704" target="ext">Download this Template</a>
-                      </h3>
-                        
-                      <hr> -->
-                        
-                      
-                    </div><!-- /col-9 -->
-                </div><!-- /padding -->
-            </div>
-            <!-- /main -->
-          
-        </div>
-    </div>
-</div>
+{% block css %}
+	<link rel="stylesheet" href="{% static 'css/carousel.css' %}">
+	<link rel="stylesheet" href="{% static 'css/index.css' %}">
+{% endblock css %}
 
+{% block javascript %}
+{% endblock javascript %}
+
+{% block body %}
+    <!-- Inicio barra superior Login -->
+	{% include 'index_login_navbar.html' %}
+    <!-- Fin barra superior Login -->
+
+
+	<!-- Inicio Carrusel -->
+	{% include 'index_carrusel.html' %}
+	<!-- Fin Carrusel -->
+
+	
+	<!-- Inicio Descripciones -->
+	<div class="container marketing" id="general-info">
+		<!-- Inicio Descripcion breve -->
+		{% include 'index_descripcion_breve.html' %}
+		<!-- Fin Descripcion breve -->
+
+		<hr class="featurette-divider">
+
+		<!-- Inicio Descripcion grande -->
+		{% include 'index_descripcion_full.html' %}
+		<!-- Fin Descripcion grande -->
+
+	<!-- Fin Descripciones -->
+
+{% endblock %}
+
+{% block footer %}
+	<p class="pull-right scroll-link" data-id="inicio"><a href="#">Volver al Inicio</a></p>
+	<p>&copy; 2014 Una iniciativa CaDCC, UChile. &middot; Términos y Condiciones para: <a href="#"> Alumnos</a> &middot; <a href="#" >Ofertantes</a></p>
+{% endblock %}
+
+{% block extra-js %}
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'js/scroll_link.js' %}"></script>
 {% endblock %}
