Cambio detalle minimo login

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -44,7 +44,7 @@
 			<form class="form-signin" role="form">
 				{% csrf_token %}
 				<h2 class="form-signin-heading">Registro Nuevo Usuario</h2>
-				<h4 class="text-center"><i><small>Egresados - Estudiantes DCC</small></i></h4>
+				<h4 class="text-center"><i><small>Egresados DCC - Estudiantes DCC</small></i></h4>
 				<!--
 				<input type="email" class="form-control" placeholder="Correo @dcc" required autofocus>
 				<input type="password" class="form-control" placeholder="Contraseña" required>
