--- a/normal_user/templates/job_sample.html
+++ b/normal_user/templates/job_sample.html
@@ -1,14 +1,32 @@
 <div class="col-sm-6 col-md-4">
 	<div class="thumbnail">
 		<div class="caption">
-			<h3>OFERTA EJEMPLO</h3>
-			<p>
+
+			<!-- Titulo Oferta -->
+			<h3 class="offerTitle">OFERTA EJEMPLO</h3>
+
+			<!-- Tags Calculados -->
+			<p class="specialTags">
 				<span title="Este aviso fue publicado hace menos de una semana" class="label label-warning">Nuevo</span>
 				<span title="Muchos usuarios han visitdo este aviso" class="label label-danger">Oferta Hot</span>
+				<span title="La empresa asociado ha publicado varias ofertas" class="label label-info">Empresa Destacada</span>
 			</p>
-			<p>Debo reemplazar todos los contenidos de los templates por valores reales que se obtengan de objetos pitón, pero calma, ya vendrá.</p>
-				<p><b>Tecnologias</b>: <span class="label label-default">Java</span> <span class="label label-default">Android</span> <span class="label label-default">GitHub</span> <span class="label label-default">MySQL</span></p>
-			<p><b>Duracion</b>: 2 Meses</p>
+
+			<!-- Descripcion breve -->
+			<p class="offerSmallDescription">Debo reemplazar todos los contenidos de los templates por valores reales que se obtengan de objetos pitón, pero calma, ya vendrá.</p>
+
+			<!-- Conocimientos Tecnicos -->
+			<p class="offerTechSkills">
+				<b>Tecnologias</b>:
+					<span class="label label-default">Java</span>
+					<span class="label label-default">Android</span>
+					<span class="label label-default">GitHub</span>
+					<span class="label label-default">MySQL</span>
+			</p>
+
+			<!-- Duracion -->
+			<p class="offerDuration"><b>Duracion</b>: 2 Meses</p>
+
 			<p><a href="#" class="btn btn-default" role="button">Ver Oferta Completa</a></p>
 		</div>
 	</div>
