--- a/normal_user/templates/navbar.html
+++ b/normal_user/templates/navbar.html
@@ -14,18 +14,18 @@
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#">Home Catalogo</a></li>
-				<li><a href="#about">About</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="#about">Acerca De</a></li>
+				<li><a href="#contact">Contacto</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right ">
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Usuario Nombre Apellido <b class="caret"></b></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> {{user}} <b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li class="dropdown-header">Administrar Cuenta</li>
 						<li><a href="#"><span class="glyphicon glyphicon-pencil"></span> Datos de Perfil</a></li>
-						<li><a href="#"><span class="glyphicon glyphicon-cog"></span> Ajustes de Cuenta</a></li>
+						<li><a href="{% url 'user_preferences' %}"><span class="glyphicon glyphicon-cog"></span> Ajustes de Cuenta</a></li>
 						<li class="divider"></li>
-						<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Cerrar Sesion</a></li>
+						<li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Cerrar Sesion</a></li>
 					</ul>
 				</li>
 			</ul>
