Agregado modelo a usuario

--- a/public/templates/index_carrusel.html
+++ b/public/templates/index_carrusel.html
@@ -10,8 +10,8 @@
 			<div class="container">
 				<div class="carousel-caption">
 					<h1>Bolsa de Trabajos DCC</h1>
-					<p>La Bolsa de Trabajos DCC es una plataforma que reúne distintas ofertas laborales abiertas para la comunidad de estudiantes y egresados de <code>Computación DCC-UChile</code>.</p>
-					<p>Entre las ofertas se incluyen <b>Prácticas Profesionales</b>, Trabajos <b>Part-Time</b> y <b>Full-Time</b>, Trabajos <b>Freelance</b> y <b>Trabajos Dirijidos</b> asociados a las distintas áreas de investigación de profesores del departamento como de empresas externas a la universidad, entre otros.</p>
+					<p>Esta es una plataforma que reúne distintas ofertas laborales abiertas para la comunidad de estudiantes y egresados del Departamento de Ciencias de la Computación, de la Universidad de Chile.</p>
+					<p>Entre las ofertas se incluyen <b>Prácticas Profesionales</b>, Trabajos <b>Part-Time</b> y <b>Full-Time</b>, Trabajos <b>Freelance</b> y <b>Trabajos Dirighyidos</b> asociados a las distintas áreas de investigación de profesores del departamento como de empresas externas a la universidad, entre otros.</p>
 					<p><a class="btn btn-lg btn-primary scroll-link" href="#" role="button" data-id="general-info">Más Información</a></p>
 				</div>
 			</div>
@@ -27,7 +27,7 @@
 					<p>
 						<a class="btn btn-lg btn-primary" href="#" role="button">Formulario para Postulaciones</a>
 						<a class="btn btn-lg btn-primary" href="{% url 'login' %}" role="button">Registro con correo DCC</a>
-					</p>
+					</p>	
 				</div>
 			</div>
 		</div>
