Agregado formulario agregar oferta con validacion de datos y despliegue de errores

--- a/public/templates/index_carrusel.html
+++ b/public/templates/index_carrusel.html
@@ -11,7 +11,7 @@
 				<div class="carousel-caption">
 					<h1>Bolsa de Trabajos DCC</h1>
 					<p>Esta es una plataforma que reúne distintas ofertas laborales abiertas para la comunidad de estudiantes y egresados del Departamento de Ciencias de la Computación, de la Universidad de Chile.</p>
-					<p>Entre las ofertas se incluyen <b>Prácticas Profesionales</b>, Trabajos <b>Part-Time</b> y <b>Full-Time</b>, Trabajos <b>Freelance</b> y <b>Trabajos Dirighyidos</b> asociados a las distintas áreas de investigación de profesores del departamento como de empresas externas a la universidad, entre otros.</p>
+					<p>Entre las ofertas se incluyen <b>Prácticas Profesionales</b>, Trabajos <b>Part-Time</b> y <b>Full-Time</b>, Trabajos <b>Freelance</b> y <b>Trabajos Dirigidos</b> asociados a las distintas áreas de investigación de profesores del departamento como de empresas externas a la universidad, entre otros.</p>
 					<p><a class="btn btn-lg btn-primary scroll-link" href="#" role="button" data-id="general-info">Más Información</a></p>
 				</div>
 			</div>
