agrego salario al modelo, preparo template para rellenarse con valores de una oferta

--- a/normal_user/templates/catalogo.html
+++ b/normal_user/templates/catalogo.html
@@ -23,6 +23,7 @@
 				{% for cat in categories %}
 					<li {% if active_tab in cat %} class="active" {% endif %}><a href="#">{{cat}}</a></li>
 				{% endfor %}
+				<li class=""><a href="#">Ver Todos</a></li>
 			</ul>
 		<!-- Fin Categorias -->
 
