--- a/normal_user/templates/oferta_full.html
+++ b/normal_user/templates/oferta_full.html
@@ -16,7 +16,7 @@
 	<div class="container">
 
 		<div class="page-header">
-			<h1>Detalle de la Oferta <small>Titulo de la oferta!</small></h1>
+			<h1>Detalle de la Oferta <small>Publicado el {{offer.date}}</small></h1>
 		</div>
 
 		<!-- Inicio Oferta -->
