--- a/normal_user/templates/catalogo.html
+++ b/normal_user/templates/catalogo.html
@@ -16,7 +16,7 @@
 	<div class="container">
 
 		<div class="page-header">
-			<h1>Catalogo de Ofertas <small></small></h1>
+			<h1>Catalogo de Ofertas <small>{{active_tab}}</small></h1>
 		</div>
 		<!-- Inicio Categorias -->
 			<ul class="nav nav-tabs nav-justified">
