--- a/normal_user/templates/navbar.html
+++ b/normal_user/templates/navbar.html
@@ -9,11 +9,11 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">Bolsa de Trabajos DCC</a>
+			<a class="navbar-brand" href="{% url 'index' %}">Bolsa de Trabajos DCC</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home Catalogo</a></li>
+				<li class="active"><a href="{% url 'catalogo' %}">Home Catalogo</a></li>
 				<li><a href="#about">Acerca De</a></li>
 				<li><a href="#contact">Contacto</a></li>
 			</ul>
