--- a/public/templates/oferta.html
+++ b/public/templates/oferta.html
@@ -16,8 +16,10 @@
 <div class="container">
 	<br>
 	<div class="page-header">
-		<h1>Acceso al Sistema <small>Publicación Ofertas y Registro Usuarios</small></h1>
+		<h1>Publicación de Ofertas <small>Formulario General</small></h1>
 	</div>
+
+<!-- Deberia ser eliminado...
 
 	{% if messages %}
 	<div class="alert alert-danger">
@@ -30,38 +32,37 @@
 	</div>
 	{% endif %}
 
-	<!-- <div class="row"> -->
-		<form class="form-horizontal" role="form" action="" method="post">
-			{% csrf_token %}
-			{% for field in offerForm %}
-				<div class="form-group">
-					<span class="col-lg-3 control-label">{{field.label_tag}}</span>
+-->
 
-					<div class="col-lg-8">
-					{% if field.name == 'short_description' %}
-						<div class="input-group">
-							{{field}}
-							<span id="counter" class="input-group-addon">0/140</span>
-						</div>
-					{% else %}
+	<form class="form-horizontal" role="form" action="" method="post">
+		{% csrf_token %}
+		{% for field in offerForm %}
+			<div class="form-group {% if field.errors %} has-error {% endif %}">
+				<span class="col-lg-3 control-label">{{field.label_tag}}</span>
+
+				<div class="col-lg-8">
+				{% if field.name == 'short_description' %}
+					<div class="input-group">
 						{{field}}
-					{% endif %}
+						<span id="counter" class="input-group-addon">0/140</span>
 					</div>
-
-					{{field.errors}}
-				  </div>
-			{%endfor%}
-			<!--<button class="btn btn-lg btn-primary btn-block" type="submit">Agregar</button>-->
-			<!-- <input type="submit" class="btn btn-lg btn-primary btn-block" value="Agregar" /> -->
-			<div class="form-group">
-				<div class="col-lg-offset-3 col-lg-8">
-					<button type="submit" class="btn btn-success">Enviar</button>
-					<button class="btn btn-danger">Cancelar</button>
+				{% else %}
+					{{field}}
+				{% endif %}
+				{{field.errors}}
 				</div>
+			  </div>
+		{%endfor%}
+		<!--<button class="btn btn-lg btn-primary btn-block" type="submit">Agregar</button>-->
+		<!-- <input type="submit" class="btn btn-lg btn-primary btn-block" value="Agregar" /> -->
+		<div class="form-group">
+			<div class="col-lg-offset-3 col-lg-8">
+				<button type="submit" class="btn btn-success">Enviar</button>
+				<button class="btn btn-danger">Cancelar</button>
 			</div>
+		</div>
 
-		</form>
-    <!-- </div>-->
+	</form>
 {% endblock %}
 
 {% block footer %}
