--- a/public/templates/index_login_navbar.html
+++ b/public/templates/index_login_navbar.html
@@ -11,16 +11,26 @@
 					</button>
 					<a class="navbar-brand" href="{% url 'index' %}">Bolsa de Trabajo DCC</a>
 				</div>
-				{% if loginForm %}
-				<div class="navbar-collapse collapse navbar-right">
-					<form class="navbar-form" action="{% url 'login' %}" role="form" method="post">
-						{% csrf_token %}
-						<div class="form-group ">{{loginForm.email}}</div>
-						<div class="form-group">{{loginForm.password}}</div>
-						<button type="submit" class="btn btn-success">Acceder</button>
-					</form>
-				</div>
-				{% endif %}
+					<div class="navbar-collapse collapse navbar-right">
+					{% if user.is_authenticated %}
+						<span class="navbar-text">Bienvenido
+						{% if user.username %}
+            				{{ user.username }} 
+        				{% else %} 
+            				{{ user.email }}
+        				{% endif %}
+        				</span>
+					{% else %}
+						{% if loginForm %}
+							<form class="navbar-form" action="{% url 'login' %}" role="form" method="post">
+								{% csrf_token %}
+								<div class="form-group ">{{loginForm.email}}</div>
+								<div class="form-group">{{loginForm.password}}</div>
+								<button type="submit" class="btn btn-success">Acceder</button>
+							</form>
+						</div>
+						{% endif %}
+					{% endif %}
 			</div>
 		</div>
 	</div>
