Cambios a la barra de login en el index

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -22,7 +22,7 @@
 
 	{% if messages %}
 	<div class="alert alert-danger">
-		<strong>Errores!</strong> Este globo sólo debería aparecer cuando algo salga mal.<br>
+		<strong>Error</strong><br>
 		<ul class="errorlist">
 			{% for message in messages %}
 			<li>{{ message }}</li>
