--- a/public/templates/index_login_navbar.html
+++ b/public/templates/index_login_navbar.html
@@ -11,26 +11,38 @@
 					</button>
 					<a class="navbar-brand" href="{% url 'index' %}">Bolsa de Trabajo DCC</a>
 				</div>
+				{% if user.is_authenticated %}
+				<div class="collapse navbar-collapse">
+					<ul class="nav navbar-nav">
+						<li><a href="{% url 'catalogo' %}">Home Catalogo</a></li>
+						<li><a href="#about">Acerca De</a></li>
+						<li><a href="#contact">Contacto</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right ">
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> {{user}} <b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li class="dropdown-header">Administrar Cuenta</li>
+								<li><a href="#"><span class="glyphicon glyphicon-pencil"></span> Datos de Perfil</a></li>
+								<li><a href="{% url 'user_preferences' %}"><span class="glyphicon glyphicon-cog"></span> Ajustes de Cuenta</a></li>
+								<li class="divider"></li>
+								<li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Cerrar Sesion</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+
+
+				{% elif loginForm %}
 					<div class="navbar-collapse collapse navbar-right">
-					{% if user.is_authenticated %}
-						<span class="navbar-text">Bienvenido
-						{% if user.username %}
-            				{{ user.username }} 
-        				{% else %} 
-            				{{ user.email }}
-        				{% endif %}
-        				</span>
-					{% else %}
-						{% if loginForm %}
-							<form class="navbar-form" action="{% url 'login' %}" role="form" method="post">
-								{% csrf_token %}
-								<div class="form-group ">{{loginForm.email}}</div>
-								<div class="form-group">{{loginForm.password}}</div>
-								<button type="submit" class="btn btn-success">Acceder</button>
-							</form>
-						</div>
-						{% endif %}
-					{% endif %}
+						<form class="navbar-form" action="{% url 'login' %}" role="form" method="post">
+							{% csrf_token %}
+							<div class="form-group ">{{loginForm.email}}</div>
+							<div class="form-group">{{loginForm.password}}</div>
+							<button type="submit" class="btn btn-success">Acceder</button>
+						</form>
+					</div>
+				{% endif %}
 			</div>
 		</div>
 	</div>
