cambios esteticos, agrego una imagen de header

--- a/public/static/css/index.css
+++ b/public/static/css/index.css
@@ -7,3 +7,8 @@
 .navbar-right{
 	padding-right: 40px !important;
 }
+
+Body{
+	background-image: url('../img/header.background.gif');
+	background-repeat: repeat-x;
+}
