--- a/public/templates/index_carrusel.html
+++ b/public/templates/index_carrusel.html
@@ -25,7 +25,7 @@
 					<p>Ya sea una empresa en búsca de trabajadores o practicantes, un académico en busca de asistentes de investigación o un partircular para un trabajo freelance. Si desea publicar una oferta de trabajo en el sistema, basta con completar un formulario donde se solicitan los datos más relevantes.</p>
 					<p>Finalmente, para validar la publicación de la oferta se enviará un correo electrónico de confirmación. Desde ese momento <b>tu publicación estará disponible en el sistema.</b></p>
 					<p>
-						<a class="btn btn-lg btn-primary" href="#" role="button">Formulario para Postulaciones</a>
+						<a class="btn btn-lg btn-primary" href="{% url 'oferta' %}" role="button">Formulario para Postulaciones</a>
 						<a class="btn btn-lg btn-primary" href="{% url 'login' %}" role="button">Registro con correo DCC</a>
 					</p>	
 				</div>
