--- a/normal_user/templates/offer_detail.html
+++ b/normal_user/templates/offer_detail.html
@@ -6,8 +6,8 @@
 		  <span class="caret"></span>
 		</button>
 		<ul class="dropdown-menu">
-		  <li><a href="#" onclick="printDiv('detalleOferta')"><span class="glyphicon glyphicon-save"></span> Imprimir Oferta</a></li>
-		  <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Enviar esta oferta a mi correo</a></li>
+		  <li><a href="#" onclick="printdiv('detalleOferta')"><span class="glyphicon glyphicon-save"></span> Imprimir Oferta</a></li>
+		  <!--<li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Enviar esta oferta a mi correo</a></li>-->
 		</ul>
 	  </div>
 	  <h4>Detalle de la Oferta</h4>
