--- a/normal_user/templates/oferta_full.html
+++ b/normal_user/templates/oferta_full.html
@@ -36,4 +36,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/scroll_link.js' %}"></script>
+	<script src="{% static 'js/printdiv.js' %}"></script>
+
 {% endblock %}
