--- a/normal_user/templates/oferta_full.html
+++ b/normal_user/templates/oferta_full.html
@@ -22,6 +22,9 @@
 		<!-- Inicio Oferta -->
 		{% include 'offer_detail.html' %}
 		<!-- Fin Oferta -->
+
+		<div class="text-center"> <a class="btn btn-default" href="{% url 'catalogo' %}" role="button">Volver a todas las ofertas</a></div>
+		<br>
 	</div>
 	<!-- Fin Contenido Catalogo -->
 
