cambios mensaje al ingresar oferta e ingresa oferta

--- a/normal_user/templates/job_sample.html
+++ b/normal_user/templates/job_sample.html
@@ -26,7 +26,7 @@
 			<!-- Duracion -->
 			<p class="offerDuration"><b>Duracion</b>: {{job.length}}</p>
 
-			<p><a href="#" class="btn btn-default" role="button">Ver Oferta Completa</a></p>
+			<p><a href="{{job.id}}" class="btn btn-default" role="button">Ver Oferta Completa</a></p>
 		</div>
 	</div>
 </div>
