--- a/public/templates/index_descripcion_full.html
+++ b/public/templates/index_descripcion_full.html
@@ -1,4 +1,5 @@
 {% load staticfiles%}
+{% if not user.is_authenticated %}
 <div id="estudiantes-info" class="row featurette">
 	<div class="col-md-7">
 		<h2 class="featurette-heading">Un completo catálogo de ofertas para <span class="text-muted">Estudiantes</span></h2>
@@ -12,6 +13,9 @@
 </div>
 
 <hr class="featurette-divider">
+
+
+{% endif %}
 
 <div id="empresas-info" class="row featurette">
 	<div class="col-md-5">
